# BlogAlone

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_ROADMAP.md  README.md  build-errors.txt  note.md  vcpkg.json
cmake/: deps.cmake
config/: config.linux.json  config.windows.json
migrations/: 001_init.sql  002_upload_deletion_state.sql
src/: deps_smoke.cc  main.cc
src/app/: routes.cc  routes.h
src/config/: app_config.cc  app_config.h
src/controllers/: admin_controller.cc  admin_controller.h  auth_controller.cc  auth_controller.h  forum_controller.cc  forum_controller.h  health_controller.cc  health_controller.h  page_controller.cc  page_controller.h  upload_controller.cc  upload_controller.h
src/db/: migrations.cc  migrations.h  transaction.cc  transaction.h
src/filters/: csrf_filter.cc  csrf_filter.h  session_filter.cc  session_filter.h
src/http/: api_error.cc  api_error.h  client_ip.cc  client_ip.h  handler_guard.h  json_body.cc  json_body.h  request_context.cc  request_context.h  session_context.cc  session_context.h  static_files.cc  static_files.h
src/models/: admin.h  forum.h  session.h  upload.h  user.cc  user.h
src/plugins/: database_migration_plugin.cc  database_migration_plugin.h  session_cleanup_plugin.cc  session_cleanup_plugin.h  upload_cleanup_plugin.cc  upload_cleanup_plugin.h
src/repositories/: admin_repository.cc  admin_repository.h  forum_repository.cc  forum_repository.h  health_repository.cc  health_repository.h  session_repository.cc  session_repository.h  upload_repository.cc  upload_repository.h  user_repository.cc  user_repository.h
src/security/: rate_limiter.cc  rate_limiter.h
src/services/: admin_service.cc  admin_service.h  auth_service.cc  auth_service.h  forum_service.cc  forum_service.h  health_service.cc  health_service.h  upload_cleanup_service.cc  upload_cleanup_service.h  upload_file_mutex.cc  upload_file_mutex.h  upload_service.cc  upload_service.h
src/smoke/: cmark_check.cc  dependency_checks.h  drogon_check.cc  libsodium_check.cc  spdlog_check.cc  sqlite_check.cc
src/util/: crypto.cc  crypto.h  image.cc  image.h  ip_address.cc  ip_address.h  markdown.cc  markdown.h  pagination.h  password.cc  password.h  text.cc  text.h  time.cc  time.h
tests/unit/: admin_test.cc  auth_test.cc  deps_smoke_test.cc  forum_test.cc  infrastructure_test.cc  markdown_test.cc  migration_runner_test.cc  test_main.cc  upload_test.cc
web/pages/: index.html  thread.html
web/static/css/: retro.css
web/static/js/: api.js
